	  interface/xaw_c.c, interface/xaw_i.c, interface/xaw_p.h,
	  interface/xdnd.h: xaw interface update (by Yair K.)
	* timidity/timidity.h: Improve timidity default settings
	  (by Yair K.)
	* configure.in: configure: Fix building with X11 based
	  userinterfaces builtin (Reported by Yair K.)
	* interface/xaw_i.c, interface/xdnd.c: Fix compiler warnings
	  from clang (by Yair K.)

2011-12-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* COPYING: Remove due to autogenerated file
	* Makefile.am, autogen.sh: Add autogen.sh

2011-12-22  Hans de Goede <hdegoede@redhat.com>

	* configure.in: [PATCH 18/18] configure: Don't add -lX11 to
	  the generic LIBS
	  This stops timidity itself from depending on libX11 even
	  when build without any interfaces builtin which need libX11.
	  (revised by TAMUKI Shoichi)
	* interface/x_sherry.c: Fix to fit with libpng 1.5 and newer

2011-12-18  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* Makefile.in, aclocal.m4, autoconf/Makefile.in,
	  autoconf/config.guess, autoconf/config.sub,
	  autoconf/depcomp, autoconf/install-sh, autoconf/missing,
	  autoconf/mkinstalldirs, config.h.in, configs/Makefile.in,
	  configure, doc/C/Makefile.in, doc/Makefile.in,
	  doc/ja_JP.eucJP/Makefile.in, interface/Makefile.in,
	  interface/bitmaps/Makefile.in,
	  interface/motif_bitmaps/Makefile.in,
	  interface/pixmaps/Makefile.in, libarc/Makefile.in,
	  libunimod/Makefile.in, script/Makefile.in,
	  timidity/Makefile.in, utils/Makefile.in, windrv/Makefile.in:
	  Remove all the autogenerated files

2011-12-08  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/alsaseq_c.c: About 4 years ago, a simple patch was
	  merged, which disabled ALSA sequencer interface polling,
	  when it's not needed.  As a result, when using ALSA
	  sequencer interface (timidity -iA -B2,8 -q0/0), it comes to
	  cause a terrible sound.  That improves with "timidity -iA",
	  however the real-time response is too bad for practical use.
	  So, I reverted the patch as a workaround.  And then, I